add elasticache settings 2

--- a/.ebextensions/elasticache.config
+++ b/.ebextensions/elasticache.config
@@ -1,8 +1,30 @@
 Resources:
+  MyElastiCache:
+    Type: "AWS::ElastiCache::CacheCluster"
+    Properties:
+      CacheNodeType:
+        Fn::GetOptionSetting:
+          OptionName : "CacheNodeType"
+          DefaultValue : "cache.t2.micro"
+      NumCacheNodes:
+        Fn::GetOptionSetting:
+          OptionName : "NumCacheNodes"
+          DefaultValue : "1"
+      Engine:
+        Fn::GetOptionSetting:
+          OptionName : "Engine"
+          DefaultValue : "redis"
+      CacheSubnetGroupName:
+        Ref: "MyCacheSubnets"
+      VpcSecurityGroupIds:
+        - Ref: "MyCacheSecurityGroup"
   MyCacheSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupDescription: "Lock cache down to webserver access only"
+      VpcId:
+        Fn::GetOptionSetting:
+          OptionName : "VpcId"
       SecurityGroupIngress :
         - IpProtocol : "tcp"
           FromPort :
@@ -13,29 +35,15 @@ Resources:
             Fn::GetOptionSetting:
               OptionName : "CachePort"
               DefaultValue: "6379"
-          SourceSecurityGroupName:
+          SourceSecurityGroupId:
             Ref: "AWSEBSecurityGroup"
-  MyElastiCache:
-    Type: "AWS::ElastiCache::CacheCluster"
+  MyCacheSubnets:
+    Type: "AWS::ElastiCache::SubnetGroup"
     Properties:
-      CacheNodeType:
+      Description: "Subnets for ElastiCache"
+      SubnetIds:
         Fn::GetOptionSetting:
-          OptionName : "CacheNodeType"
-          DefaultValue : "cache.t1.micro"
-      NumCacheNodes:
-        Fn::GetOptionSetting:
-          OptionName : "NumCacheNodes"
-          DefaultValue : "1"
-      Engine:
-        Fn::GetOptionSetting:
-          OptionName : "Engine"
-          DefaultValue : "redis"
-      VpcSecurityGroupIds:
-        -
-          Fn::GetAtt:
-            - MyCacheSecurityGroup
-            - GroupId
-
+          OptionName : "CacheSubnets"
 Outputs:
   ElastiCache:
     Description : "ID of ElastiCache Cache Cluster with Redis Engine"
