add elasticache settings 3

--- a/.ebextensions/elasticache.config
+++ b/.ebextensions/elasticache.config
@@ -1,4 +1,24 @@
+option_settings: 
+    aws:elasticbeanstalk:application:environment:
+        REDIS_CLUSTER: '`{ "Fn::GetAtt": ["MyElastiCache", "RedisEndpoint.Address"]}`'
+
 Resources:
+  MyCacheSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
+    Properties:
+      GroupDescription: "Lock cache down to webserver access only"
+      SecurityGroupIngress :
+        - IpProtocol : "tcp"
+          FromPort :
+            Fn::GetOptionSetting:
+              OptionName : "CachePort"
+              DefaultValue: "6379"
+          ToPort :
+            Fn::GetOptionSetting:
+              OptionName : "CachePort"
+              DefaultValue: "6379"
+          SourceSecurityGroupName:
+            Ref: "AWSEBSecurityGroup"
   MyElastiCache:
     Type: "AWS::ElastiCache::CacheCluster"
     Properties:
@@ -14,36 +34,12 @@ Resources:
         Fn::GetOptionSetting:
           OptionName : "Engine"
           DefaultValue : "redis"
-      CacheSubnetGroupName:
-        Ref: "MyCacheSubnets"
       VpcSecurityGroupIds:
-        - Ref: "MyCacheSecurityGroup"
-  MyCacheSecurityGroup:
-    Type: "AWS::EC2::SecurityGroup"
-    Properties:
-      GroupDescription: "Lock cache down to webserver access only"
-      VpcId:
-        Fn::GetOptionSetting:
-          OptionName : "VpcId"
-      SecurityGroupIngress :
-        - IpProtocol : "tcp"
-          FromPort :
-            Fn::GetOptionSetting:
-              OptionName : "CachePort"
-              DefaultValue: "6379"
-          ToPort :
-            Fn::GetOptionSetting:
-              OptionName : "CachePort"
-              DefaultValue: "6379"
-          SourceSecurityGroupId:
-            Ref: "AWSEBSecurityGroup"
-  MyCacheSubnets:
-    Type: "AWS::ElastiCache::SubnetGroup"
-    Properties:
-      Description: "Subnets for ElastiCache"
-      SubnetIds:
-        Fn::GetOptionSetting:
-          OptionName : "CacheSubnets"
+        -
+          Fn::GetAtt:
+            - MyCacheSecurityGroup
+            - GroupId
+
 Outputs:
   ElastiCache:
     Description : "ID of ElastiCache Cache Cluster with Redis Engine"
