--- a/.ebextensions/elasticache.config
+++ b/.ebextensions/elasticache.config
@@ -1,6 +1,7 @@
 option_settings: 
     aws:elasticbeanstalk:application:environment:
-        REDIS_CLUSTER: '`{ "Fn::GetAtt": ["MyElastiCache", "RedisEndpoint.Address"]}`'
+        REDIS_CLUSTER_ADDRESS: '`{ "Fn::GetAtt": ["MyElastiCache", "RedisEndpoint.Address"]}`'
+        REDIS_CLUSTER_PORT: '`{ "Fn::GetAtt": ["MyElastiCache", "RedisEndpoint.Port"]}`'
 
 Resources:
   MyCacheSecurityGroup:
